Querry string in get_all
